# src/profile/profile.controller.ts
@@ -1,11 +1,22 @@
-import { Controller, Get, Req, UseGuards } from '@nestjs/common';
+import { Body, Controller, Get, Patch, Req, UseGuards } from '@nestjs/common';
 import { JwtGuard } from '../jwt/jwt.guard';
+import { ProfileService } from './profile.service';
 
 @Controller('profile')
 @UseGuards(JwtGuard)
 export class ProfileController {
+  constructor(private readonly profileService: ProfileService) {}
+
   @Get()
   getProfile(@Req() req: any) {
-    return req.user;
+    return this.profileService.getProfile(req.user.userId);
+  }
+
+  @Patch()
+  updateProfile(
+    @Req() req: any,
+    @Body() body: { username?: string; displayColor?: string },
+  ) {
+    return this.profileService.updateProfile(req.user.userId, body);
   }
 }
